--- a/start/start/azure-vm-start.yml
+++ b/start/start/azure-vm-start.yml
@@ -13,26 +13,11 @@ steps:
     echo "ISSUE: $env:ISSUE"
     echo "TEST: $env:TEST"
 
-    $jsonOutput = az vm list --show-details --query "[?powerState=='VM deallocated']" | Out-String | ConvertFrom-Json
-    $Agent = $jsonOutput | Where-Object { $_.name -match "Agent" } | Select-Object -ExpandProperty name
-    $dkns = $jsonOutput | Where-Object { $_.name -match "dkns" } | Select-Object -ExpandProperty name
 
-    $Agent = $Agent | Select-Object -First 1
-    $dkns = $dkns | Select-Object -First 1
+    $Agent = "jimin01Agent"
+    $dkns = "jimindkns"
 
-
-    $AgentNumber = [regex]::Match($Agent, 'Agent(\d+)').Groups[1].Value
-    $dknsNumber = [regex]::Match($dkns, 'dkns(\d+)').Groups[1].Value
-
-    echo "가상 머신 $AgentNumber 확인 됨."
-    echo "가상 머신 $dknsNumber 확인 됨."
-
-    if ($AgentNumber -ne $dknsNumber) {
-      Write-Output "Agent$AgentNumber의 subnet을 dkns$dknsNumber subnet과 동일하게 변경 합니다."
-
-      az network nic update --ids "/subscriptions/f85dce05-6791-4464-afde-6ac8649b9b3d/resourceGroups/Automated_Test/providers/Microsoft.Network/networkInterfaces/Agent$AgentNumberVMNic" --set ipConfigurations[0].subnet.id="/subscriptions/f85dce05-6791-4464-afde-6ac8649b9b3d/resourceGroups/Automated_Test/providers/Microsoft.Network/virtualNetworks/DtlAutomated_Test/subnets/subnet-00$dknsNumber"
-    }
-
+ 
     az vm start --name $Agent --resource-group Automated_Test
     az vm start --name $dkns --resource-group Automated_Test
 
@@ -50,13 +35,6 @@ steps:
 
     echo "DKNS SITE: $ISSUEDKNS"
     echo "DKNS IMG: $TESTIMGDKNS"
-
-    icacls "$(Build.SourcesDirectory)/start/DKNS.pem" /inheritance:r
-    icacls "$(Build.SourcesDirectory)/start/DKNS.pem" /grant:r "$($env:USERNAME):R"
-
-    echo "pem 파일 권한 변경"
-
-    ssh -o StrictHostKeyChecking=no -i $(Build.SourcesDirectory)/start/DKNS.pem $dkns@$dknsIP "sudo sed -i 's#^DKNS_SERVER=.*#DKNS_SERVER=$ISSUEDKNS.demo.genians.co.kr#; s#^DKNS_IMAGE=.*#DKNS_IMAGE=genians/genian-nac6-ns-dev:$TESTIMGDKNS' /usr/geni/conf/genian.conf; sudo cat /usr/geni/conf/genian.conf; sudo reboot"
 
     psexec -accepteula \\$AgentIP -u Tester -p Tester1234@! -i 1 -h cmd /C start /MIN C:/test.bat $TESTIMG $ISSUE $TEST $Agent $dkns
   displayName: 'Azure Start VM/Run Test(PsExec)'
