--- a/start/start/azure-pipelines.yml
+++ b/start/start/azure-pipelines.yml
@@ -31,4 +31,5 @@ jobs:
       Copy-Item -Path $psexecPath -Destination 'C:\Windows\System32\PsExec.exe'
       [System.Environment]::SetEnvironmentVariable('Path', [System.Environment]::GetEnvironmentVariable('Path', [System.EnvironmentVariableTarget]::Machine) + ";$psexecPath", [System.EnvironmentVariableTarget]::Machine)
     displayName: 'Download and Install PsExec'
+  - template: azure-vm-start.yml
 
